--- a/Dealwheel/Base.lproj/Main.storyboard
+++ b/Dealwheel/Base.lproj/Main.storyboard
@@ -113,7 +113,7 @@
                                     <constraint firstAttribute="width" secondItem="7zh-e3-NF7" secondAttribute="height" multiplier="30:17" id="wLc-e3-xWg"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is an awesome deal I just won on this app" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Hu-tG-gii">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is an awesome deal I just won on this app" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Hu-tG-gii">
                                 <rect key="frame" x="40" y="386" width="240" height="42"/>
                                 <fontDescription key="fontDescription" name="BudmoJiggler-Regular" family="Budmo" pointSize="18"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -144,21 +144,21 @@
                         <constraints>
                             <constraint firstItem="Y5b-yC-biB" firstAttribute="top" secondItem="kWG-e5-ABa" secondAttribute="bottom" constant="32" id="0zc-Cx-xhF"/>
                             <constraint firstItem="YB4-0H-6h2" firstAttribute="leading" secondItem="zPe-tn-85L" secondAttribute="leadingMargin" constant="44" id="2l9-Yn-GqO"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="7Hu-tG-gii" secondAttribute="trailing" constant="24" id="4i3-4O-rdc"/>
                             <constraint firstAttribute="trailingMargin" secondItem="kFk-pD-KEL" secondAttribute="trailing" constant="96" id="7CM-uw-pPO"/>
                             <constraint firstAttribute="trailingMargin" secondItem="YB4-0H-6h2" secondAttribute="trailing" constant="44" id="7ci-FI-zeZ"/>
                             <constraint firstItem="7zh-e3-NF7" firstAttribute="top" secondItem="TWo-Px-V66" secondAttribute="bottom" constant="28" id="8Au-TN-Hdg"/>
+                            <constraint firstAttribute="trailing" secondItem="7Hu-tG-gii" secondAttribute="trailing" constant="40" id="Bdq-H8-L83"/>
                             <constraint firstItem="kFk-pD-KEL" firstAttribute="leading" secondItem="zPe-tn-85L" secondAttribute="leadingMargin" constant="96" id="GSn-N1-3vp"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Y5b-yC-biB" secondAttribute="trailing" constant="59" id="My1-QJ-xVR"/>
                             <constraint firstItem="kFk-pD-KEL" firstAttribute="top" secondItem="YB4-0H-6h2" secondAttribute="bottom" constant="8" id="QqA-il-h3V"/>
                             <constraint firstItem="7zh-e3-NF7" firstAttribute="leading" secondItem="zPe-tn-85L" secondAttribute="leadingMargin" constant="24" id="Rpl-gd-ABy"/>
                             <constraint firstAttribute="trailingMargin" secondItem="TWo-Px-V66" secondAttribute="trailing" constant="94" id="daI-kj-zzt"/>
                             <constraint firstItem="TWo-Px-V66" firstAttribute="leading" secondItem="zPe-tn-85L" secondAttribute="leadingMargin" constant="94" id="e1k-Ar-2aT"/>
-                            <constraint firstItem="7Hu-tG-gii" firstAttribute="leading" secondItem="zPe-tn-85L" secondAttribute="leadingMargin" constant="24" id="f0e-bY-vAV"/>
                             <constraint firstItem="om5-9y-xU4" firstAttribute="top" secondItem="kFk-pD-KEL" secondAttribute="bottom" constant="50" id="jch-sY-gsI"/>
                             <constraint firstAttribute="trailingMargin" secondItem="7zh-e3-NF7" secondAttribute="trailing" constant="24" id="jl6-r8-HZV"/>
-                            <constraint firstItem="7Hu-tG-gii" firstAttribute="top" secondItem="7zh-e3-NF7" secondAttribute="bottom" constant="10" id="oFf-M7-8Hi"/>
+                            <constraint firstItem="7Hu-tG-gii" firstAttribute="top" secondItem="7zh-e3-NF7" secondAttribute="bottom" constant="10" id="p8j-UQ-iRT"/>
                             <constraint firstItem="TWo-Px-V66" firstAttribute="top" secondItem="Y5b-yC-biB" secondAttribute="bottom" constant="11" id="wJK-Dn-nIs"/>
+                            <constraint firstItem="7Hu-tG-gii" firstAttribute="leading" secondItem="zPe-tn-85L" secondAttribute="leading" constant="40" id="y66-uy-OfP"/>
                             <constraint firstItem="Y5b-yC-biB" firstAttribute="leading" secondItem="zPe-tn-85L" secondAttribute="leadingMargin" constant="59" id="zOd-DQ-nT9"/>
                         </constraints>
                     </view>
